Complete styling for showcase section.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<header class="showcase">
 				<div class="content">
 					<img src="images/logo.png" class="logo" alt="Charles Martin Does Work">
-					<div class="title">I am Charles Martin Reed and I <span class="xl-primary-text">W</span>ork.</div>
+					<div class="title">I am Charles Martin Reed and I <span class="xl-primary-text">WORK.</span></div>
 					<div class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium beatae magnam, quos libero modi pariatur.</div>
 				</div>
 			</header>
