Complete initial styling for site.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 			<!-- SERVICES SECTION -->
 			<section class="services">
-				<div class="container grid-3">
+				<div class="container grid-3 center">
 					<div>
 						<i class="fab fa-twitter fa-3x"></i>
 						<h3>Twitter</h3>
@@ -40,21 +40,21 @@
 			</section>
 
 			<!-- ABOUT SECTION -->
-			<section class="about">
+			<section class="about bg-light">
 				<div class="container">
 					<div class="grid-2">
 						<div class="center">
 							<i class="fas fa-laptop-code fa-10x"></i>
 						</div>
 						<div>
-							<h3>I am</h3>
+							<h2>About Charles</h2>
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita illum vel praesentium repellat, odio eaque sint laborum. Sint, voluptatibus deserunt sed? Necessitatibus mollitia, minus, tempore deserunt explicabo autem ex delectus vero, assumenda incidunt doloribus odio doloremque ab. Explicabo, voluptas, mollitia!</p>
 						</div>
 					</div>
 				</div>
 			</section>
 
-			<footer class="center">
+			<footer class="center bg-dark">
 				<p>Charles Martin Reed - &copy; 2019</p>
 			</footer>
 
