--- a/index.html
+++ b/index.html
@@ -1,62 +1,82 @@
-	<!DOCTYPE html>
-	<html lang="en">
-		<head>
-			<meta charset="UTF-8">
-			<meta name="viewport" content="width=device-width, initial-scale=1.0">
-			<meta http-equiv="X-UA-Compatible" content="ie=edge">
-			<link rel="stylesheet" href="style.css">
-			<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-			<title>Charles Martin Does Work</title>
-		</head>
-		<body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+      integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
+      crossorigin="anonymous"
+    />
+    <title>Code All The Things</title>
+  </head>
+  <body>
+    <header class="showcase">
+      <div class="content">
+        <img src="images/logo.png" class="logo" alt="Dummy Logo" />
+        <div class="title">
+          I am Charles and this is
+          <span class="xl-primary-text">Code All The Things.</span>
+        </div>
+        <div class="text">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium
+          beatae magnam, quos libero modi pariatur.
+        </div>
+      </div>
+    </header>
 
-			<header class="showcase">
-				<div class="content">
-					<img src="images/logo.png" class="logo" alt="Charles Martin Does Work">
-					<div class="title">I am Charles Martin Reed and I <span class="xl-primary-text">WORK.</span></div>
-					<div class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium beatae magnam, quos libero modi pariatur.</div>
-				</div>
-			</header>
+    <!-- SERVICES SECTION -->
+    <section class="services">
+      <div class="container grid-3 center">
+        <div>
+          <i class="fas fa-blog fa-3x"></i>
+          <h3>Codetalking</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Praesentium, dicta!
+          </p>
+        </div>
+        <div>
+          <i class="fas fa-laptop-code fa-3x"></i>
+          <h3>Our Work</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Praesentium, dicta!
+          </p>
+        </div>
+        <div>
+          <i class="fas fa-address-book fa-3x"></i>
+          <h3>Contact Us</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Praesentium, dicta!
+          </p>
+        </div>
+      </div>
+    </section>
 
-			<!-- SERVICES SECTION -->
-			<section class="services">
-				<div class="container grid-3 center">
-					<div>
-						<i class="fab fa-twitter fa-3x"></i>
-						<h3>Twitter</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium, dicta!</p>
-					</div>
-					<div>
-						<i class="fas fa-chalkboard-teacher fa-3x"></i>
-						<h3>Courses</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium, dicta!</p>
-					</div>
-					<div>
-						<i class="fas fa-briefcase fa-3x"></i>
-						<h3>Freelance Projects</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium, dicta!</p>
-					</div>
-				</div>
-			</section>
+    <!-- ABOUT SECTION -->
+    <section class="about bg-light">
+      <div class="container contact">
+        <div>
+          <a href="https://twitter.com/supalatecharlie"
+            ><i class="fab fa-twitter fa-2x"></i
+          ></a>
+          <a href="https://www.facebook.com/charliesoandso"
+            ><i class="fab fa-facebook fa-2x"></i
+          ></a>
+          <a href="https://www.instagram.com/supalatecharlie/"
+            ><i class="fab fa-instagram fa-2x"></i
+          ></a>
+        </div>
+      </div>
+    </section>
 
-			<!-- ABOUT SECTION -->
-			<section class="about bg-light">
-				<div class="container">
-					<div class="grid-2">
-						<div class="center">
-							<i class="fas fa-laptop-code fa-10x"></i>
-						</div>
-						<div>
-							<h2>About Charles</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita illum vel praesentium repellat, odio eaque sint laborum. Sint, voluptatibus deserunt sed? Necessitatibus mollitia, minus, tempore deserunt explicabo autem ex delectus vero, assumenda incidunt doloribus odio doloremque ab. Explicabo, voluptas, mollitia!</p>
-						</div>
-					</div>
-				</div>
-			</section>
-
-			<footer class="center bg-dark">
-				<p>Charles Martin Reed - &copy; 2019</p>
-			</footer>
-
-		</body>
-	</html>
+    <footer class="center bg-dark">
+      <p>Made with plenty of ❤️ by Charles Marin Reed - &copy; 2019</p>
+    </footer>
+  </body>
+</html>
